--- a/plantillas/menu-bottom.html
+++ b/plantillas/menu-bottom.html
@@ -1,13 +1,13 @@
 <nav class="bar bar-tab">
-  <a class="tab-item active" href="#">
+  <a class="tab-item active" href="#/inicio">
     <span class="icon icon-home"></span>
     <span class="tab-label">Inicio</span>
   </a>
-  <a class="tab-item" href="#">
+  <a class="tab-item" href="#/inicio">
     <span class="icon icon-person"></span>
     <span class="tab-label">Perfil</span>
   </a>
-  <a class="tab-item" href="#">
+  <a class="tab-item" href="#/inicio">
     <span class="icon icon-star-filled"></span>
     <span class="tab-label">Ajustes</span>
   </a>
