--- a/plantillas/menu-bottom.html
+++ b/plantillas/menu-bottom.html
@@ -13,3 +13,13 @@
   </a>
 
 </nav>
+<nav class="bar bar-tab">
+  <a class="tab-item active" href="#">
+    Label
+  </a>
+  <a class="tab-item" href="#">
+    Label
+  </a>
+  <a class="tab-item" href="#">
+    Label
+  </a>
