--- a/plantillas/menu.html
+++ b/plantillas/menu.html
@@ -1,9 +1,5 @@
 <header class="bar bar-nav">
-  <a class="btn pull-left" href="#/agregar">
-    Agregar
-  </a>
-  <a class="btn pull-right" href="#/acerca">
-    Acerca
-  </a>
-  <h1 class="title">Agenda</h1>
+  <a class="icon icon-person pull-left" href="#/agregar"></a>
+  <a class="icon icon-compose pull-right" href="#/acerca"></a>
+  <a class="title" href="#/inicio"> Agenda</a>
 </header>
