ajustado error en DB

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
 	<title>Agenda</title>
-     <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
+     <!--<script type="text/javascript" charset="utf-8" src="cordova.js"></script>-->
     <script type="text/javascript" src="libs/angular.min.js"></script>
 	<script type="text/javascript" src="libs/angular-route.min.js" type="text/javascript"></script>
     <script src="js/app.js" type="text/javascript"></script>
